# uvox

./: .gitignore  tags
components/accelerometer/: CMakeLists.txt  accelerometer.c  accelerometer.h  accelerometr.c  chromatic_made.c  chromatic_mode.c  leds.c  pentatonic_mode.c  pwm_notes.c
components/buttons/: CMakeLists.txt  buttons.c  buttons.h
components/include/: CMakeLists.txt  components.h
components/leds/: CMakeLists.txt  leds.h  pwm_leds.c
components/mx_function/: CMakeLists.txt  mx_function.h  mx_strsplit.c
components/oled/: CMakeLists.txt  oled.c  oled.h  task_oled.c
components/sound/: CMakeLists.txt  chromatic_mode.c  pentatonic_mode.c  pwm_notes.c  sound.h
components/test_fireware/: CMakeLists.txt  test_fireware.c  test_fireware.h
components/uart_console/: CMakeLists.txt  command_execution.c  simple_simbols_handler.c  uart_console.c  uart_console.h
components/wifi/: CMakeLists.txt  wifi.c  wifi.h
main/: .ledc_example_main.c.swp  .pwm.c.swp  CMakeLists.txt  main.c  main.h  pwm_notes.c
